--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Android Project</string>
     <string name="need_to_sign_in"><u>I don\'t have a user yet</u> </string>
+    <string name="add">Add</string>
 </resources>
